--- a/index.html
+++ b/index.html
@@ -30,6 +30,23 @@
                 <button class="btn">Get Early Access</button>
             </div>
         </nav>
+        <section class="hero-section">
+            <div class="hero-section-contant">
+                <div class="access-btn">
+                    <button class="access-btn1">Early Access Now Open</button>
+                    <div id="texting">
+                        <h1>Structured thinking,</h1>
+                        <h1><span class="note-taking">Not just note-taking.</span></h1>
+                    </div>
+                    <p>A private space to store notes, links, and learning summaries — designed to
+                        help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+                        <div class="btn-1">
+                            <button>Start Building Your Vault</button>
+                            <button>See How It Works</button>
+                        </div>
+                </div>
+            </div>
+        </section>
     </header>
 </body>
 
